Log benchmark GC events